@@ -22,25 +22,29 @@ public class Schedule {
     }
 
     public  void addSchedule(String scheduleText){
+        System.out.println("kkkkkkkkkkk1" + scheduleText);
         int temp;
         if((temp = scheduleText.indexOf("monday"))> -1) {
 
-            temp += 2;
+            temp += 7;
             int startPoint = temp;
             int endPoint = temp;
             for(int i = temp; i < scheduleText.length()&& scheduleText.charAt(i) != ':'; i++){
+
                 if(scheduleText.charAt(i) == '['){
                     startPoint = i;
-
+                    System.out.println(startPoint);
+                    System.out.println("kkkkkkkkkkk1");
                 } if( scheduleText.charAt(i) == ']'){
                     endPoint = i;
+                    System.out.println("kkkkkkkkkkk2");
                     monday[Integer.parseInt(scheduleText.substring(startPoint + 1, endPoint))] = "class";
                 }
             }
         }
         if((temp = scheduleText.indexOf("tuesday"))> -1) {
 
-            temp += 2;
+            temp += 8;
             int startPoint = temp;
             int endPoint = temp;
             for(int i = temp; i < scheduleText.length()&& scheduleText.charAt(i) != ':'; i++){
@@ -55,14 +59,15 @@ public class Schedule {
         }
         if((temp = scheduleText.indexOf("wednesday"))> -1) {
 
-            temp += 2;
+            temp += 10;
             int startPoint = temp;
             int endPoint = temp;
             for(int i = temp; i < scheduleText.length()&& scheduleText.charAt(i) != ':'; i++){
                 if(scheduleText.charAt(i) == '['){
                     startPoint = i;
 
-                } if( scheduleText.charAt(i) == ']'){
+                }
+                if( scheduleText.charAt(i) == ']'){
                     endPoint = i;
                     wednesday[Integer.parseInt(scheduleText.substring(startPoint + 1, endPoint))] = "class";
                 }
@@ -70,7 +75,7 @@ public class Schedule {
         }
         if((temp = scheduleText.indexOf("thursday"))> -1) {
 
-            temp += 2;
+            temp += 9;
             int startPoint = temp;
             int endPoint = temp;
             for(int i = temp; i < scheduleText.length()&& scheduleText.charAt(i) != ':'; i++){
@@ -85,7 +90,7 @@ public class Schedule {
         }
         if((temp = scheduleText.indexOf("friday"))> -1) {
 
-            temp += 2;
+            temp += 7;
             int startPoint = temp;
             int endPoint = temp;
             for(int i = temp; i < scheduleText.length()&& scheduleText.charAt(i) != ':'; i++){
@@ -100,118 +105,6 @@ public class Schedule {
         }
     }
 
-    public  void addSchedule(String scheduleText, String courseTitle, String courseProfessor){
-        String professor;
-        if(courseProfessor.equals("")){
-            professor="";
-        }else {
-            professor = "(" + courseProfessor + ")";
-        }
-        int temp;
-        if((temp = scheduleText.indexOf("monday"))> -1) {
-
-            temp += 2;
-            int startPoint = temp;
-            int endPoint = temp;
-            for(int i = temp; i < scheduleText.length()&& scheduleText.charAt(i) != ':'; i++){
-                if(scheduleText.charAt(i) == '['){
-                    startPoint = i;
-
-                } if( scheduleText.charAt(i) == ']'){
-                    endPoint = i;
-                    monday[Integer.parseInt(scheduleText.substring(startPoint + 1, endPoint))] = courseTitle + courseProfessor;
-                }
-            }
-        }
-        if((temp = scheduleText.indexOf("tuesday"))> -1) {
-
-            temp += 2;
-            int startPoint = temp;
-            int endPoint = temp;
-            for(int i = temp; i < scheduleText.length()&& scheduleText.charAt(i) != ':'; i++){
-                if(scheduleText.charAt(i) == '['){
-                    startPoint = i;
-
-                } if( scheduleText.charAt(i) == ']'){
-                    endPoint = i;
-                    tuesday[Integer.parseInt(scheduleText.substring(startPoint + 1, endPoint))] = courseTitle + courseProfessor;
-                }
-            }
-        }
-        if((temp = scheduleText.indexOf("wednesday"))> -1) {
-
-            temp += 2;
-            int startPoint = temp;
-            int endPoint = temp;
-            for(int i = temp; i < scheduleText.length()&& scheduleText.charAt(i) != ':'; i++){
-                if(scheduleText.charAt(i) == '['){
-                    startPoint = i;
-
-                } if( scheduleText.charAt(i) == ']'){
-                    endPoint = i;
-                    wednesday[Integer.parseInt(scheduleText.substring(startPoint + 1, endPoint))] = courseTitle + courseProfessor;
-                }
-            }
-        }
-        if((temp = scheduleText.indexOf("thursday"))> -1) {
-
-            temp += 2;
-            int startPoint = temp;
-            int endPoint = temp;
-            for(int i = temp; i < scheduleText.length()&& scheduleText.charAt(i) != ':'; i++){
-                if(scheduleText.charAt(i) == '['){
-                    startPoint = i;
-
-                } if( scheduleText.charAt(i) == ']'){
-                    endPoint = i;
-                    thursday[Integer.parseInt(scheduleText.substring(startPoint + 1, endPoint))] = courseTitle + courseProfessor;
-                }
-            }
-        }
-        if((temp = scheduleText.indexOf("friday"))> -1) {
-
-            temp += 2;
-            int startPoint = temp;
-            int endPoint = temp;
-            for(int i = temp; i < scheduleText.length()&& scheduleText.charAt(i) != ':'; i++){
-                if(scheduleText.charAt(i) == '['){
-                    startPoint = i;
-
-                } if( scheduleText.charAt(i) == ']'){
-                    endPoint = i;
-                    friday[Integer.parseInt(scheduleText.substring(startPoint + 1, endPoint))] = courseTitle + courseProfessor;
-                }
-            }
-        }
-    }
-
-    public void setting(TextView[] monday, TextView[] tuesday, TextView[] wednesday, TextView[] thursday, TextView[] friday, Context context){
-
-        for(int i = 0; i < 14; i++){
-            if (!this.monday[i].equals("")){
-                monday[i].setText(this.monday[i]);
-                monday[i].setBackgroundColor(context.getResources().getColor(R.color.colorPrimary));
-            }
-            if (!this.tuesday[i].equals("")){
-                tuesday[i].setText(this.tuesday[i]);
-                tuesday[i].setBackgroundColor(context.getResources().getColor(R.color.colorPrimary));
-            }if (!this.wednesday[i].equals("")){
-                wednesday[i].setText(this.wednesday[i]);
-                wednesday[i].setBackgroundColor(context.getResources().getColor(R.color.colorPrimary));
-            }
-            if (!this.thursday[i].equals("")){
-                thursday[i].setText(this.thursday[i]);
-                thursday[i].setBackgroundColor(context.getResources().getColor(R.color.colorPrimary));
-            }
-            if (!this.friday[i].equals("")){
-                friday[i].setText(this.friday[i]);
-                friday[i].setBackgroundColor(context.getResources().getColor(R.color.colorPrimary));
-            }
-
-        }
-
-
-    }
 
     public boolean validate(String scheduleText){
         if (scheduleText.equals("")){
@@ -221,7 +114,7 @@ public class Schedule {
 
         if((temp = scheduleText.indexOf("monday"))> -1) {
 
-            temp += 2;
+            temp += 7;
             int startPoint = temp;
             int endPoint = temp;
             for(int i = temp; i < scheduleText.length()&& scheduleText.charAt(i) != ':'; i++){
@@ -238,7 +131,7 @@ public class Schedule {
         }
         if((temp = scheduleText.indexOf("tuesday"))> -1) {
 
-            temp += 2;
+            temp += 8;
             int startPoint = temp;
             int endPoint = temp;
             for(int i = temp; i < scheduleText.length()&& scheduleText.charAt(i) != ':'; i++){
@@ -255,7 +148,7 @@ public class Schedule {
         }
         if((temp = scheduleText.indexOf("wednesday"))> -1) {
 
-            temp += 2;
+            temp += 10;
             int startPoint = temp;
             int endPoint = temp;
             for(int i = temp; i < scheduleText.length()&& scheduleText.charAt(i) != ':'; i++){
@@ -272,7 +165,7 @@ public class Schedule {
         }
         if((temp = scheduleText.indexOf("thursday"))> -1) {
 
-            temp += 2;
+            temp += 9;
             int startPoint = temp;
             int endPoint = temp;
             for(int i = temp; i < scheduleText.length()&& scheduleText.charAt(i) != ':'; i++){
@@ -289,7 +182,7 @@ public class Schedule {
         }
         if((temp = scheduleText.indexOf("friday"))> -1) {
 
-            temp += 2;
+            temp += 7;
             int startPoint = temp;
             int endPoint = temp;
             for(int i = temp; i < scheduleText.length()&& scheduleText.charAt(i) != ':'; i++){
@@ -305,5 +198,143 @@ public class Schedule {
             }
         }
         return true;
+    }
+
+    public  void addSchedule(String scheduleText, String courseTitle, String courseProfessor){
+//        System.out.println("mmmmmmmmmmmmmmmm"+ scheduleText);
+//        System.out.println("mmmmmmmmmmmmmmmm"+ courseTitle);
+//        System.out.println("mmmmmmmmmmmmmmmm"+ courseProfessor);
+        String professor;
+        if(courseProfessor.equals("")){
+            professor="";
+        }else {
+            professor = "(" + courseProfessor + ")";
+        }
+
+        int temp;
+        if((temp = scheduleText.indexOf("monday"))> -1) {
+
+
+            temp += 7;
+            int startPoint = temp;
+            int endPoint = temp;
+            for(int i = temp; i < scheduleText.length() && scheduleText.charAt(i) != ':'; i++){
+
+                if(scheduleText.charAt(i) == '['){
+                    startPoint = i;
+
+                } if( scheduleText.charAt(i) == ']'){
+                    endPoint = i;
+                    monday[Integer.parseInt(scheduleText.substring(startPoint + 1, endPoint))] = courseTitle + professor;
+                }
+            }
+        }
+        if((temp = scheduleText.indexOf("tuesday"))> -1) {
+
+            temp += 8;
+            int startPoint = temp;
+            int endPoint = temp;
+            for(int i = temp; i < scheduleText.length()&& scheduleText.charAt(i) != ':'; i++){
+                if(scheduleText.charAt(i) == '['){
+                    startPoint = i;
+
+                } if( scheduleText.charAt(i) == ']'){
+                    endPoint = i;
+                    tuesday[Integer.parseInt(scheduleText.substring(startPoint + 1, endPoint))] = courseTitle + professor;
+                }
+            }
+        }
+        if((temp = scheduleText.indexOf("wednesday"))> -1) {
+            System.out.println(temp);
+            temp += 10;
+            int startPoint = temp;
+            int endPoint = temp;
+            for(int i = temp; i < scheduleText.length()&& scheduleText.charAt(i) != ':'; i++){
+                if(scheduleText.charAt(i) == '['){
+                    startPoint = i;
+
+
+                } if( scheduleText.charAt(i) == ']'){
+                    endPoint = i;
+                    wednesday[Integer.parseInt(scheduleText.substring(startPoint + 1, endPoint))] = courseTitle + professor;
+                }
+            }
+        }
+        if((temp = scheduleText.indexOf("thursday"))> -1) {
+
+            temp += 9;
+            int startPoint = temp;
+            int endPoint = temp;
+            for(int i = temp; i < scheduleText.length()&& scheduleText.charAt(i) != ':'; i++){
+                if(scheduleText.charAt(i) == '['){
+                    startPoint = i;
+
+                } if( scheduleText.charAt(i) == ']'){
+                    endPoint = i;
+                    thursday[Integer.parseInt(scheduleText.substring(startPoint + 1, endPoint))] = courseTitle + professor;
+                }
+            }
+        }
+        if((temp = scheduleText.indexOf("friday"))> -1) {
+
+            temp += 7;
+            int startPoint = temp;
+            int endPoint = temp;
+            for(int i = temp; i < scheduleText.length()&& scheduleText.charAt(i) != ':'; i++){
+                if(scheduleText.charAt(i) == '['){
+                    startPoint = i;
+
+                } if( scheduleText.charAt(i) == ']'){
+                    endPoint = i;
+                    friday[Integer.parseInt(scheduleText.substring(startPoint + 1, endPoint))] = courseTitle + professor;
+                }
+            }
+        }
+    }
+    // print schedule list on time table
+    public void setting(TextView[] monday, TextView[] tuesday, TextView[] wednesday, TextView[] thursday, TextView[] friday, Context context){
+
+
+
+        for(int i = 0; i < 14; i++){
+            System.out.println("!!!!!@#!@#!#====" + this.monday[i]);
+            System.out.println("!!!!!@#!@#!#====" + this.tuesday[i]);
+            System.out.println("!!!!!@#!@#!#====" + this.wednesday[i]);
+            System.out.println("!!!!!@#!@#!#====" + this.thursday[i]);
+            System.out.println("!!!!!@#!@#!#====" + this.friday[i]);
+            if (!this.monday[i].equals("")){
+
+                monday[i].setText(this.monday[i]);
+                monday[i].setBackgroundColor(context.getResources().getColor(R.color.colorPrimary));
+
+            }
+            if (!this.tuesday[i].equals("")){
+
+                System.out.println("!!!!!@#!@#!#====" + this.tuesday[i]);
+                System.out.println("!!!!!?????====" + tuesday[i].toString());
+                tuesday[i].setText(this.tuesday[i]);
+                tuesday[i].setBackgroundColor(context.getResources().getColor(R.color.colorPrimary));
+            }if (!this.wednesday[i].equals("")){
+                System.out.println("!!!!!@#!@#!#====" + this.wednesday[i]);
+                System.out.println("!!!!!?????====" + wednesday[i].toString());
+                wednesday[i].setText(this.wednesday[i]);
+                wednesday[i].setBackgroundColor(context.getResources().getColor(R.color.colorPrimary));
+            }
+            if (!this.thursday[i].equals("")){
+                System.out.println("!!!!!@#!@#!#====" + this.thursday[i]);
+                System.out.println("!!!!!?????====" + thursday[i].toString());
+                thursday[i].setText(this.thursday[i]);
+                thursday[i].setBackgroundColor(context.getResources().getColor(R.color.colorPrimary));
+            }
+            if (!this.friday[i].equals("")){
+                System.out.println("!!!!!@#!@#!#====" + this.friday[i]);
+                System.out.println("!!!!!?????====" + friday[i].toString());
+                friday[i].setText(this.friday[i]);
+                friday[i].setBackgroundColor(context.getResources().getColor(R.color.colorPrimary));
+            }
+
+        }
+
+
     }
 }
