@@ -9,7 +9,10 @@
 <TableLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="5dp"
+
+    >
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -242,7 +245,7 @@
             android:gravity="right"
             />
         <TextView
-            android:text="Month"
+            android:text="Monday"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="3"
